First variation of the taskList

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.section {
+	@apply bg-sub-bg w-[90%] mx-auto my-3 p-2 rounded-md sm:p-3;
+}
