--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,6 +6,10 @@
 	@apply bg-sub-bg w-[90%] mx-auto my-3 p-2 rounded-md sm:p-3;
 }
 
+.row {
+	@apply w-full grid grid-cols-[1fr_25px] justify-between px-1 py-2 border-b-2 border-sub-dark rounded-sm sm:grid-cols-[1fr_35px_60px];
+}
+
 @layer base {
 	h2{
 		@apply font-medium tracking-wider;
